--- a/makefile.lst
+++ b/makefile.lst
@@ -6,215 +6,215 @@
 ASE = aseprite$(EXE)
 
 COMMON_SOURCES =					\
-	src/commands/cmd_about.c			\
-	src/commands/cmd_advanced_mode.c		\
-	src/commands/cmd_background_from_layer.c	\
-	src/commands/cmd_cel_properties.c		\
-	src/commands/cmd_change_image_type.c		\
-	src/commands/cmd_clear.c			\
-	src/commands/cmd_close_file.c			\
-	src/commands/cmd_configure_screen.c		\
-	src/commands/cmd_configure_tools.c		\
-	src/commands/cmd_copy.c				\
-	src/commands/cmd_copy_cel.c			\
-	src/commands/cmd_crop.c				\
-	src/commands/cmd_cut.c				\
-	src/commands/cmd_deselect_mask.c		\
-	src/commands/cmd_draw_text.c			\
-	src/commands/cmd_drawing_tools.c		\
-	src/commands/cmd_duplicate_layer.c		\
-	src/commands/cmd_duplicate_sprite.c		\
-	src/commands/cmd_exit.c				\
-	src/commands/cmd_eyedropper_tool.c		\
-	src/commands/cmd_film_editor.c			\
-	src/commands/cmd_flatten_layers.c		\
-	src/commands/cmd_flip.c				\
-	src/commands/cmd_frame_properties.c		\
-	src/commands/cmd_goto_frame.c			\
-	src/commands/cmd_goto_layer.c			\
-	src/commands/cmd_grid.c				\
-	src/commands/cmd_invert_mask.c			\
-	src/commands/cmd_layer_from_background.c	\
-	src/commands/cmd_layer_properties.c		\
-	src/commands/cmd_load_mask.c			\
-	src/commands/cmd_mask_all.c			\
-	src/commands/cmd_mask_by_color.c		\
-	src/commands/cmd_merge_down_layer.c		\
-	src/commands/cmd_move_cel.c			\
-	src/commands/cmd_new_file.c			\
-	src/commands/cmd_new_frame.c			\
-	src/commands/cmd_new_layer.c			\
-	src/commands/cmd_new_layer_set.c		\
-	src/commands/cmd_open_file.c			\
-	src/commands/cmd_options.c			\
-	src/commands/cmd_palette_editor.c		\
-	src/commands/cmd_paste.c			\
-	src/commands/cmd_play_animation.c		\
-	src/commands/cmd_play_flic.c			\
-	src/commands/cmd_preview.c			\
-	src/commands/cmd_record_screen.c		\
-	src/commands/cmd_redo.c				\
-	src/commands/cmd_refresh.c			\
-	src/commands/cmd_remove_cel.c			\
-	src/commands/cmd_remove_frame.c			\
-	src/commands/cmd_remove_layer.c			\
-	src/commands/cmd_reselect_mask.c		\
-	src/commands/cmd_save_file.c			\
-	src/commands/cmd_save_mask.c			\
-	src/commands/cmd_screen_shot.c			\
-	src/commands/cmd_select_file.c			\
-	src/commands/cmd_sprite_editor.c		\
-	src/commands/cmd_sprite_properties.c		\
-	src/commands/cmd_switch_colors.c		\
-	src/commands/cmd_tips.c				\
-	src/commands/cmd_undo.c				\
-	src/commands/commands.c				\
-	src/commands/fx/cmd_color_curve.c		\
-	src/commands/fx/cmd_convolution_matrix.c	\
-	src/commands/fx/cmd_despeckle.c			\
-	src/commands/fx/cmd_invert_color.c		\
-	src/commands/fx/cmd_replace_color.c		\
-	src/commands/fx/effectbg.c			\
-	src/console/console.c				\
-	src/core/app.c					\
-	src/core/cfg.c					\
-	src/core/color.c				\
-	src/core/config.c				\
-	src/core/core.c					\
-	src/core/dirs.c					\
-	src/core/file_system.c				\
-	src/core/modules.c				\
-	src/dialogs/aniedit.c				\
-	src/dialogs/canvasze.c				\
-	src/dialogs/drawtext.c				\
-	src/dialogs/filesel.c				\
-	src/dialogs/maskcol.c				\
-	src/dialogs/options.c				\
-	src/dialogs/playfli.c				\
-	src/dialogs/repo.c				\
-	src/dialogs/tips.c				\
-	src/dialogs/vectmap.c				\
-	src/effect/colcurve.c				\
-	src/effect/convmatr.c				\
-	src/effect/effect.c				\
-	src/effect/invrtcol.c				\
-	src/effect/median.c				\
-	src/effect/replcol.c				\
-	src/file/ase_format.c				\
-	src/file/bmp_format.c				\
-	src/file/file.c					\
-	src/file/fli/fli.c				\
-	src/file/fli_format.c				\
-	src/file/format_options.c			\
-	src/file/gif/format.c				\
-	src/file/gif/lzw.c				\
-	src/file/gif_format.c				\
-	src/file/ico_format.c				\
-	src/file/jpeg_format.c				\
-	src/file/pcx_format.c				\
-	src/file/png_format.c				\
-	src/file/tga_format.c				\
-	src/intl/intl.c					\
-	src/intl/msgids.c				\
-	src/jinete/jaccel.c				\
-	src/jinete/jalert.c				\
-	src/jinete/jbox.c				\
-	src/jinete/jbutton.c				\
-	src/jinete/jclipboard.c				\
-	src/jinete/jcombobox.c				\
-	src/jinete/jdraw.c				\
-	src/jinete/jentry.c				\
-	src/jinete/jgrid.c				\
-	src/jinete/jfile.c				\
-	src/jinete/jfilesel.c				\
-	src/jinete/jfont.c				\
-	src/jinete/jfontbmp.c				\
-	src/jinete/jhook.c				\
-	src/jinete/jimage.c				\
-	src/jinete/jintern.c				\
-	src/jinete/jlabel.c				\
-	src/jinete/jlist.c				\
-	src/jinete/jlistbox.c				\
-	src/jinete/jmanager.c				\
-	src/jinete/jmem.c				\
-	src/jinete/jmenu.c				\
-	src/jinete/jmessage.c				\
-	src/jinete/jmutex.c				\
-	src/jinete/jpanel.c				\
-	src/jinete/jquickmenu.c				\
-	src/jinete/jrect.c				\
-	src/jinete/jregion.c				\
-	src/jinete/jsep.c				\
-	src/jinete/jslider.c				\
-	src/jinete/jstream.c				\
-	src/jinete/jsystem.c				\
-	src/jinete/jtextbox.c				\
-	src/jinete/jtheme.c				\
-	src/jinete/jthread.c				\
-	src/jinete/jtooltips.c				\
-	src/jinete/jview.c				\
-	src/jinete/jwidget.c				\
-	src/jinete/jwindow.c				\
-	src/jinete/jxml.c				\
-	src/jinete/themes/jstandard_theme.c		\
-	src/modules/editors.c				\
-	src/modules/gfx.c				\
-	src/modules/gui.c				\
-	src/modules/palettes.c				\
-	src/modules/recent.c				\
-	src/modules/rootmenu.c				\
-	src/modules/sprites.c				\
-	src/modules/tools.c				\
-	src/raster/algo.c				\
-	src/raster/algofill.c				\
-	src/raster/blend.c				\
-	src/raster/brush.c				\
-	src/raster/cel.c				\
-	src/raster/dirty.c				\
-	src/raster/gfxobj.c				\
-	src/raster/image.c				\
-	src/raster/layer.c				\
-	src/raster/mask.c				\
-	src/raster/palette.c				\
-	src/raster/path.c				\
-	src/raster/quant.c				\
-	src/raster/rotate.c				\
-	src/raster/sprite.c				\
-	src/raster/stock.c				\
-	src/raster/undo.c				\
-	src/util/autocrop.c				\
-	src/util/boundary.c				\
-	src/util/celmove.c				\
-	src/util/clipbrd.c				\
-	src/util/col_file.c				\
-	src/util/filetoks.c				\
-	src/util/functions.c				\
-	src/util/hash.c					\
-	src/util/misc.c					\
-	src/util/msk_file.c				\
-	src/util/pic_file.c				\
-	src/util/quantize.c				\
-	src/util/recscr.c				\
-	src/util/render.c				\
-	src/util/thmbnail.c				\
-	src/widgets/colbar.c				\
-	src/widgets/colbut.c				\
-	src/widgets/colsel.c				\
-	src/widgets/colview.c				\
-	src/widgets/curvedit.c				\
-	src/widgets/editor/click.c			\
-	src/widgets/editor/cursor.c			\
-	src/widgets/editor/editor.c			\
-	src/widgets/editor/keys.c			\
-	src/widgets/fileview.c				\
-	src/widgets/groupbut.c				\
-	src/widgets/menuitem.c				\
-	src/widgets/paledit.c				\
-	src/widgets/preview.c				\
-	src/widgets/statebar.c				\
-	src/widgets/tabs.c				\
-	src/widgets/target.c				\
-	src/widgets/toolbar.c
+	src/commands/cmd_about.cpp			\
+	src/commands/cmd_advanced_mode.cpp		\
+	src/commands/cmd_background_from_layer.cpp	\
+	src/commands/cmd_cel_properties.cpp		\
+	src/commands/cmd_change_image_type.cpp		\
+	src/commands/cmd_clear.cpp			\
+	src/commands/cmd_close_file.cpp			\
+	src/commands/cmd_configure_screen.cpp		\
+	src/commands/cmd_configure_tools.cpp		\
+	src/commands/cmd_copy.cpp			\
+	src/commands/cmd_copy_cel.cpp			\
+	src/commands/cmd_crop.cpp			\
+	src/commands/cmd_cut.cpp			\
+	src/commands/cmd_deselect_mask.cpp		\
+	src/commands/cmd_draw_text.cpp			\
+	src/commands/cmd_drawing_tools.cpp		\
+	src/commands/cmd_duplicate_layer.cpp		\
+	src/commands/cmd_duplicate_sprite.cpp		\
+	src/commands/cmd_exit.cpp			\
+	src/commands/cmd_eyedropper_tool.cpp		\
+	src/commands/cmd_film_editor.cpp		\
+	src/commands/cmd_flatten_layers.cpp		\
+	src/commands/cmd_flip.cpp			\
+	src/commands/cmd_frame_properties.cpp		\
+	src/commands/cmd_goto_frame.cpp			\
+	src/commands/cmd_goto_layer.cpp			\
+	src/commands/cmd_grid.cpp			\
+	src/commands/cmd_invert_mask.cpp		\
+	src/commands/cmd_layer_from_background.cpp	\
+	src/commands/cmd_layer_properties.cpp		\
+	src/commands/cmd_load_mask.cpp			\
+	src/commands/cmd_mask_all.cpp			\
+	src/commands/cmd_mask_by_color.cpp		\
+	src/commands/cmd_merge_down_layer.cpp		\
+	src/commands/cmd_move_cel.cpp			\
+	src/commands/cmd_new_file.cpp			\
+	src/commands/cmd_new_frame.cpp			\
+	src/commands/cmd_new_layer.cpp			\
+	src/commands/cmd_new_layer_set.cpp		\
+	src/commands/cmd_open_file.cpp			\
+	src/commands/cmd_options.cpp			\
+	src/commands/cmd_palette_editor.cpp		\
+	src/commands/cmd_paste.cpp			\
+	src/commands/cmd_play_animation.cpp		\
+	src/commands/cmd_play_flic.cpp			\
+	src/commands/cmd_preview.cpp			\
+	src/commands/cmd_record_screen.cpp		\
+	src/commands/cmd_redo.cpp			\
+	src/commands/cmd_refresh.cpp			\
+	src/commands/cmd_remove_cel.cpp			\
+	src/commands/cmd_remove_frame.cpp		\
+	src/commands/cmd_remove_layer.cpp		\
+	src/commands/cmd_reselect_mask.cpp		\
+	src/commands/cmd_save_file.cpp			\
+	src/commands/cmd_save_mask.cpp			\
+	src/commands/cmd_screen_shot.cpp		\
+	src/commands/cmd_select_file.cpp		\
+	src/commands/cmd_sprite_editor.cpp		\
+	src/commands/cmd_sprite_properties.cpp		\
+	src/commands/cmd_switch_colors.cpp		\
+	src/commands/cmd_tips.cpp			\
+	src/commands/cmd_undo.cpp			\
+	src/commands/commands.cpp			\
+	src/commands/fx/cmd_color_curve.cpp		\
+	src/commands/fx/cmd_convolution_matrix.cpp	\
+	src/commands/fx/cmd_despeckle.cpp		\
+	src/commands/fx/cmd_invert_color.cpp		\
+	src/commands/fx/cmd_replace_color.cpp		\
+	src/commands/fx/effectbg.cpp			\
+	src/console/console.cpp				\
+	src/core/app.cpp				\
+	src/core/cfg.cpp				\
+	src/core/color.cpp				\
+	src/core/config.cpp				\
+	src/core/core.cpp				\
+	src/core/dirs.cpp				\
+	src/core/file_system.cpp			\
+	src/core/modules.cpp				\
+	src/dialogs/aniedit.cpp				\
+	src/dialogs/canvasze.cpp			\
+	src/dialogs/drawtext.cpp			\
+	src/dialogs/filesel.cpp				\
+	src/dialogs/maskcol.cpp				\
+	src/dialogs/options.cpp				\
+	src/dialogs/playfli.cpp				\
+	src/dialogs/repo.cpp				\
+	src/dialogs/tips.cpp				\
+	src/dialogs/vectmap.cpp				\
+	src/effect/colcurve.cpp				\
+	src/effect/convmatr.cpp				\
+	src/effect/effect.cpp				\
+	src/effect/invrtcol.cpp				\
+	src/effect/median.cpp				\
+	src/effect/replcol.cpp				\
+	src/file/ase_format.cpp				\
+	src/file/bmp_format.cpp				\
+	src/file/file.cpp				\
+	src/file/fli/fli.cpp				\
+	src/file/fli_format.cpp				\
+	src/file/format_options.cpp			\
+	src/file/gif/format.cpp				\
+	src/file/gif/lzw.cpp				\
+	src/file/gif_format.cpp				\
+	src/file/ico_format.cpp				\
+	src/file/jpeg_format.cpp			\
+	src/file/pcx_format.cpp				\
+	src/file/png_format.cpp				\
+	src/file/tga_format.cpp				\
+	src/intl/intl.cpp				\
+	src/intl/msgids.cpp				\
+	src/jinete/jaccel.cpp				\
+	src/jinete/jalert.cpp				\
+	src/jinete/jbox.cpp				\
+	src/jinete/jbutton.cpp				\
+	src/jinete/jclipboard.cpp			\
+	src/jinete/jcombobox.cpp			\
+	src/jinete/jdraw.cpp				\
+	src/jinete/jentry.cpp				\
+	src/jinete/jgrid.cpp				\
+	src/jinete/jfile.cpp				\
+	src/jinete/jfilesel.cpp				\
+	src/jinete/jfont.cpp				\
+	src/jinete/jfontbmp.cpp				\
+	src/jinete/jhook.cpp				\
+	src/jinete/jimage.cpp				\
+	src/jinete/jintern.cpp				\
+	src/jinete/jlabel.cpp				\
+	src/jinete/jlist.cpp				\
+	src/jinete/jlistbox.cpp				\
+	src/jinete/jmanager.cpp				\
+	src/jinete/jmem.cpp				\
+	src/jinete/jmenu.cpp				\
+	src/jinete/jmessage.cpp				\
+	src/jinete/jmutex.cpp				\
+	src/jinete/jpanel.cpp				\
+	src/jinete/jquickmenu.cpp			\
+	src/jinete/jrect.cpp				\
+	src/jinete/jregion.cpp				\
+	src/jinete/jsep.cpp				\
+	src/jinete/jslider.cpp				\
+	src/jinete/jstream.cpp				\
+	src/jinete/jsystem.cpp				\
+	src/jinete/jtextbox.cpp				\
+	src/jinete/jtheme.cpp				\
+	src/jinete/jthread.cpp				\
+	src/jinete/jtooltips.cpp			\
+	src/jinete/jview.cpp				\
+	src/jinete/jwidget.cpp				\
+	src/jinete/jwindow.cpp				\
+	src/jinete/jxml.cpp				\
+	src/jinete/themes/jstandard_theme.cpp		\
+	src/modules/editors.cpp				\
+	src/modules/gfx.cpp				\
+	src/modules/gui.cpp				\
+	src/modules/palettes.cpp			\
+	src/modules/recent.cpp				\
+	src/modules/rootmenu.cpp			\
+	src/modules/sprites.cpp				\
+	src/modules/tools.cpp				\
+	src/raster/algo.cpp				\
+	src/raster/algofill.cpp				\
+	src/raster/blend.cpp				\
+	src/raster/brush.cpp				\
+	src/raster/cel.cpp				\
+	src/raster/dirty.cpp				\
+	src/raster/gfxobj.cpp				\
+	src/raster/image.cpp				\
+	src/raster/layer.cpp				\
+	src/raster/mask.cpp				\
+	src/raster/palette.cpp				\
+	src/raster/path.cpp				\
+	src/raster/quant.cpp				\
+	src/raster/rotate.cpp				\
+	src/raster/sprite.cpp				\
+	src/raster/stock.cpp				\
+	src/raster/undo.cpp				\
+	src/util/autocrop.cpp				\
+	src/util/boundary.cpp				\
+	src/util/celmove.cpp				\
+	src/util/clipbrd.cpp				\
+	src/util/col_file.cpp				\
+	src/util/filetoks.cpp				\
+	src/util/functions.cpp				\
+	src/util/hash.cpp				\
+	src/util/misc.cpp				\
+	src/util/msk_file.cpp				\
+	src/util/pic_file.cpp				\
+	src/util/quantize.cpp				\
+	src/util/recscr.cpp				\
+	src/util/render.cpp				\
+	src/util/thmbnail.cpp				\
+	src/widgets/colbar.cpp				\
+	src/widgets/colbut.cpp				\
+	src/widgets/colsel.cpp				\
+	src/widgets/colview.cpp				\
+	src/widgets/curvedit.cpp			\
+	src/widgets/editor/click.cpp			\
+	src/widgets/editor/cursor.cpp			\
+	src/widgets/editor/editor.cpp			\
+	src/widgets/editor/keys.cpp			\
+	src/widgets/fileview.cpp			\
+	src/widgets/groupbut.cpp			\
+	src/widgets/menuitem.cpp			\
+	src/widgets/paledit.cpp				\
+	src/widgets/preview.cpp				\
+	src/widgets/statebar.cpp			\
+	src/widgets/tabs.cpp				\
+	src/widgets/target.cpp				\
+	src/widgets/toolbar.cpp
 
 ifdef USE_386_ASM
   COMMON_SOURCES += \
@@ -226,7 +226,7 @@ COMMON_OBJS = $(addprefix $(OBJ_DIR)/,				\
 	        $(addsuffix $(OBJ),				\
 	          $(notdir $(basename $(COMMON_SOURCES)))))
 
-ASE_SOURCES = src/main.c $(COMMON_SOURCES)
+ASE_SOURCES = src/main.cpp $(COMMON_SOURCES)
 
 ASE_OBJS = $(addprefix $(OBJ_DIR)/,				\
 	     $(addsuffix $(OBJ),				\
@@ -480,10 +480,10 @@ THIRD_PARTY_LIBS =				\
 
 TESTS = $(addsuffix $(EXE),						\
 		$(basename						\
-			$(wildcard src/test/*.c)			\
-			$(wildcard src/test/raster/*.c)			\
-			$(wildcard src/test/jinete/*.c)))
+			$(wildcard src/tests/*.cpp)			\
+			$(wildcard src/tests/raster/*.cpp)		\
+			$(wildcard src/tests/jinete/*.cpp)))
 
 AUTOTESTS = $(addsuffix $(EXE),						\
 		$(basename						\
-			$(wildcard src/test/*.c)))
+			$(wildcard src/tests/*.cpp)))
