--- a/makefile.lst
+++ b/makefile.lst
@@ -182,6 +182,7 @@ COMMON_SOURCES =					\
 	src/raster/sprite.cpp				\
 	src/raster/stock.cpp				\
 	src/raster/undo.cpp				\
+	src/raster/undoable.cpp				\
 	src/util/autocrop.cpp				\
 	src/util/boundary.cpp				\
 	src/util/celmove.cpp				\
