Added Context and UIContext classes. Added CurrentSprite class. Removed current_sprite global. Moved all functions of 'sprites' module to Context/UIContext.

--- a/makefile.lst
+++ b/makefile.lst
@@ -6,6 +6,8 @@
 ASE = aseprite$(EXE)
 
 COMMON_SOURCES =					\
+	src/ase/context.cpp				\
+	src/ase/ui_context.cpp				\
 	src/commands/cmd_about.cpp			\
 	src/commands/cmd_advanced_mode.cpp		\
 	src/commands/cmd_background_from_layer.cpp	\
