--- a/makefile.vc
+++ b/makefile.vc
@@ -94,6 +94,7 @@ $(ZLIB_LIB): $(ZLIB_OBJS)
 # Rules to build objects and the application
 
 VPATH = src					\
+	src/ase					\
 	src/commands				\
 	src/commands/fx				\
 	src/console				\
