--- a/makefile.gcc
+++ b/makefile.gcc
@@ -80,6 +80,7 @@ $(ZLIB_LIB): $(ZLIB_OBJS)
 # Rules to build objects and the application
 
 VPATH = src					\
+	src/ase					\
 	src/commands				\
 	src/commands/fx				\
 	src/console				\
