+ Added Context parameter to CurrentSprite. + Now CurrentSprite is defined in current_sprite.h. + Modified several routines to get the current sprite as parameter.

--- a/makefile.lst
+++ b/makefile.lst
@@ -7,6 +7,7 @@ ASE = aseprite$(EXE)
 
 COMMON_SOURCES =					\
 	src/ase/context.cpp				\
+	src/ase/current_sprite.cpp			\
 	src/ase/ui_context.cpp				\
 	src/commands/cmd_about.cpp			\
 	src/commands/cmd_advanced_mode.cpp		\
