Added memory leak detection for MSVC.

--- a/makefile.vc
+++ b/makefile.vc
@@ -46,6 +46,11 @@ else
   LIBS += Alleg.lib
 endif
 
+ifdef MEMLEAK
+  CFLAGS += -DMEMLEAK
+  LIBS += dbghelp.lib
+endif
+
 ######################################################################
 # General rules
 
