+ Modified makefile.vc to handle a completelly static compilation with VC++9.0 Express Edition   (the new compiler used for the following Win32 binary releases). + Modified some error handling code to use C++ exceptions. + Modified some collections (std::vector, std::map, etc.) from instances to pointers.

--- a/makefile.cfg
+++ b/makefile.cfg
@@ -10,9 +10,11 @@
 ######################################################################
 # Uncomment this if you want to debug or profile information
 
+#RELEASE = 1
 #DEBUGMODE = 1
 #PROFILE = 1
 #MEMLEAK = 1
+#STATIC_ALLEG_LINK = 1
 
 ######################################################################
 # Default Unix directory to look for ASE data (to this path will be
