--- a/makefile.lst
+++ b/makefile.lst
@@ -11,6 +11,7 @@ COMMON_SOURCES =					\
 	src/commands/cmd_background_from_layer.cpp	\
 	src/commands/cmd_canvas_size.cpp		\
 	src/commands/cmd_cel_properties.cpp		\
+	src/commands/cmd_change_color.cpp		\
 	src/commands/cmd_change_image_type.cpp		\
 	src/commands/cmd_clear.cpp			\
 	src/commands/cmd_close_file.cpp			\
