--- a/makefile.vc
+++ b/makefile.vc
@@ -29,6 +29,7 @@ CFLAGS = -nologo						\
 	 -I$(LIBJPEG_DIR)					\
 	 -I$(LIBPNG_DIR)					\
 	 -I$(ZLIB_DIR)						\
+	 -I$(LOADPNG_DIR)					\
 	 -DPNG_NO_MMX_CODE
 
 LFLAGS = -NOLOGO -SUBSYSTEM:WINDOWS -MACHINE:X86
@@ -111,6 +112,10 @@ $(ZLIB_LIB): $(ZLIB_OBJS)
 	-rm -f $@
 	lib -NOLOGO -OUT:$@ $^
 
+$(LOADPNG_LIB): $(LOADPNG_OBJS)
+	-rm -f $@
+	lib -NOLOGO -OUT:$@ $^
+
 ######################################################################
 # Rules to build objects and the application
 
@@ -153,7 +158,8 @@ VPATH = src					\
 	$(LIBGD_DIR)				\
 	$(LIBJPEG_DIR)				\
 	$(LIBPNG_DIR)				\
-	$(ZLIB_DIR)
+	$(ZLIB_DIR)				\
+	$(LOADPNG_DIR)
 
 ASE_DEPS = $(ASE_OBJS) $(THIRD_PARTY_LIBS)
 
@@ -179,6 +185,9 @@ $(OBJ_DIR)/png.%$(OBJ): %.c
 	$(CC) $(CFLAGS) -I$(LIBPNG_DIR) -Fo$@ -c $<
 
 $(OBJ_DIR)/zlib.%$(OBJ): %.c
+	$(CC) $(CFLAGS) -Fo$@ -c $<
+
+$(OBJ_DIR)/loadpng.%$(OBJ): %.c
 	$(CC) $(CFLAGS) -Fo$@ -c $<
 
 ######################################################################
