Added resizable capability (with a patched version of Allegro). It must be enabled through the special flag HAVE_RESIZE_PATCH.

--- a/makefile.cfg
+++ b/makefile.cfg
@@ -15,6 +15,7 @@
 #PROFILE = 1
 #MEMLEAK = 1
 #STATIC_ALLEG_LINK = 1
+#HAVE_RESIZE_PATCH = 1
 
 ######################################################################
 # Default Unix directory to look for ASE data (to this path will be
