--- a/makefile.lst
+++ b/makefile.lst
@@ -77,7 +77,6 @@ COMMON_SOURCES =					\
 	src/commands/fx/cmd_invert_color.cpp		\
 	src/commands/fx/cmd_replace_color.cpp		\
 	src/commands/fx/effectbg.cpp			\
-	src/core/app.cpp				\
 	src/core/cfg.cpp				\
 	src/core/color.cpp				\
 	src/core/config.cpp				\
@@ -231,6 +230,7 @@ COMMON_OBJS = $(addprefix $(OBJ_DIR)/,				\
 	          $(notdir $(basename $(COMMON_SOURCES)))))
 
 ASE_SOURCES = \
+	src/app.cpp						\
 	src/console.cpp						\
 	src/context.cpp						\
 	src/main.cpp						\
