Added jpoint.cpp in the COMMON_SOURCES list.

--- a/makefile.lst
+++ b/makefile.lst
@@ -146,6 +146,7 @@ COMMON_SOURCES =					\
 	src/jinete/jmutex.cpp				\
 	src/jinete/jpanel.cpp				\
 	src/jinete/jpoint.cpp				\
+	src/jinete/jpoint.cpp				\
 	src/jinete/jquickmenu.cpp			\
 	src/jinete/jrect.cpp				\
 	src/jinete/jregion.cpp				\
