- All tools stuff refactored in various files/components. - Added classes: IToolLoop, Tool, ToolGroup, ToolInk, ToolController, ToolPointShape, ToolIntertwine, ToolBox, etc. - Added ToolLoopManager. - Removed old src/modules/tools.cpp. - Added ISettings and UISettingsImpl, adding the tools settings (onion skinning, grid, tiled mode, etc.). - Added App::PenSizeBeforeChange, PenSizeAfterChange, CurrentToolChange signals. - Renamed Context::get_bg/fg_color to getBg/FgColor. - Refactored Brush class to Pen and added PenType. - Renamed tiled_t to TiledMode. - get_config_rect now uses the new Rect class imported from Vaca instead of old jrect. - Added default_skin.xml to load tool icons. - Added pen preview in Editor::cursor stuff. - Added Editor::decorators.
Note: This big patch is from some time ago. I did my best to pre-commit other small changes before this big one.

--- a/makefile.lst
+++ b/makefile.lst
@@ -172,12 +172,11 @@ COMMON_SOURCES =					\
 	src/modules/recent.cpp				\
 	src/modules/rootmenu.cpp			\
 	src/modules/skinneable_theme.cpp		\
-	src/modules/tools.cpp				\
 	src/raster/algo.cpp				\
 	src/raster/algofill.cpp				\
 	src/raster/algo_polygon.cpp			\
 	src/raster/blend.cpp				\
-	src/raster/brush.cpp				\
+	src/raster/pen.cpp				\
 	src/raster/cel.cpp				\
 	src/raster/dirty.cpp				\
 	src/raster/gfxobj.cpp				\
@@ -191,6 +190,9 @@ COMMON_SOURCES =					\
 	src/raster/sprite.cpp				\
 	src/raster/stock.cpp				\
 	src/raster/undo.cpp				\
+	src/settings/ui_settings_impl.cpp		\
+	src/tools/tool.cpp				\
+	src/tools/toolbox.cpp				\
 	src/util/autocrop.cpp				\
 	src/util/boundary.cpp				\
 	src/util/celmove.cpp				\
