--- a/makefile.gcc
+++ b/makefile.gcc
@@ -112,6 +112,8 @@ VPATH = src					\
 	src/modules				\
 	src/raster				\
 	src/raster/x86				\
+	src/settings				\
+	src/tools				\
 	src/util				\
 	src/widgets				\
 	src/widgets/editor			\
