--- a/makefile.vc
+++ b/makefile.vc
@@ -154,6 +154,8 @@ VPATH = src					\
 	src/modules				\
 	src/raster				\
 	src/raster/x86				\
+	src/settings				\
+	src/tools				\
 	src/util				\
 	src/widgets				\
 	src/widgets/editor			\
