--- a/makefile.vc
+++ b/makefile.vc
@@ -134,6 +134,10 @@ $(TINYXML_LIB): $(TINYXML_OBJS)
 	-rm -f $@
 	lib -NOLOGO -OUT:$@ $^
 
+$(VACA_LIB): $(VACA_OBJS)
+	-rm -f $@
+	lib -NOLOGO -OUT:$@ $^
+
 ######################################################################
 # Rules to build objects and the application
 
@@ -180,7 +184,8 @@ VPATH = src					\
 	$(LIBPNG_DIR)				\
 	$(ZLIB_DIR)				\
 	$(LOADPNG_DIR)				\
-	$(TINYXML_DIR)
+	$(TINYXML_DIR)				\
+	$(VACA_DIR)/src
 
 ASE_DEPS = $(ASE_OBJS) $(THIRD_PARTY_LIBS)
 
@@ -212,6 +217,9 @@ $(OBJ_DIR)/loadpng.%$(OBJ): %.c
 	$(CC) $(CFLAGS) -Fo$@ -c $<
 
 $(OBJ_DIR)/tinyxml.%$(OBJ): %.cpp
+	$(CC) $(CFLAGS) -Fo$@ -c $<
+
+$(OBJ_DIR)/vaca.%$(OBJ): %.cpp
 	$(CC) $(CFLAGS) -Fo$@ -c $<
 
 ######################################################################
