--- a/makefile.lst
+++ b/makefile.lst
@@ -505,7 +505,7 @@ TINYXML_OBJS = $(addprefix $(OBJ_DIR)/tinyxml.,		\
 # Vaca
 
 VACA_LIB = $(OBJ_DIR)/libvaca$(LIB_EXT)
-VACA_DIR = src/jinete/vaca_fusion
+VACA_DIR = third_party/vaca
 VACA_SOURCES =					\
 	$(VACA_DIR)/src/Component.cpp		\
 	$(VACA_DIR)/src/Debug.cpp		\
